# kotlin-poet-rs

./: Cargo.toml  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  doc.yml
benches/: file_rendering_bencharmk.rs  name_escaping.rs
src/: lib.rs
src/io/: code_buffer.rs  mod.rs  render.rs  tokens.rs
src/spec/: access_modifier.rs  annotation.rs  annotation_target.rs  argument.rs  class.rs  class_inheritance_modifier.rs  class_like_inheritance_modifier.rs  class_like_parameter.rs  class_like_type.rs  class_like_type_name.rs  code_block.rs  comment.rs  companion_object.rs  file.rs  function.rs  function_type.rs  generic_invariance.rs  generic_parameter.rs  import.rs  inheritance_modifier.rs  kdoc.rs  lambda_type.rs  member_inheritance_modifier.rs  mod.rs  name.rs  package.rs  parameter.rs  primary_constructor.rs  property.rs  secondary_constructor.rs  type.rs  type_alias.rs  type_name.rs  visibility_modifier.rs
src/tokens/: README.md  mod.rs
src/util/: mod.rs  semantic_conversion_error.rs
tests/: generic_file.rs  integration.rs
tests/samples/: class_with_companion_object.kt  generic_file.kt  kdoc.kt
