[package]
name = "kotlin-poet-rs"
version = "0.8.0-indev"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lexa-diky/kotlin-poet-rs"
readme = "README.md"
documentation = "https://github.com/lexa-diky/kotlin-poet-rs"
homepage = "https://github.com/lexa-diky/kotlin-poet-rs"
description = "Kotlin code generation library for Rust"
keywords = ["kotlin", "codegen"]
categories = ["template-engine"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "file_rendering_bencharmk"
harness = false

[[bench]]
name = "name_escaping"
harness = false